# KwikKhata

./: .env  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  ai_parser.py  app.py  config.py  database.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: pylint.yml
api/: compliance.py  dashboard.py  ops.py  public_v1.py  whatsapp_webhook.py
jobs/: daily_reminder_job.py
models/: message.py
scripts/: env_wizard.py  migrate_excel.py  restore_backup.py  validate_env.py
services/: compliance_service.py  dashboard_service.py  ledger_agent.py  localization.py  message_router.py  monitoring.py  rate_limiter.py  reminder_engine.py  security_utils.py  stt_service.py  vision_service.py  whatsapp_client.py
tests/: conftest.py  test_compliance_service.py  test_dashboard_service.py  test_database.py  test_localization.py  test_main_commands.py  test_migration.py  test_monitoring.py  test_parser_rules.py  test_phase3_intelligence.py  test_rate_limiter.py  test_reminder_engine.py  test_restore_backup.py  test_security_utils.py  test_whatsapp_integration.py
