[project]
name = "kwikkhata"
version = "0.4.0"
description = "Terminal-first Hinglish ledger assistant for local Indian shopkeepers with WhatsApp integration"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "openpyxl>=3.1.0,<4.0",
    "google-generativeai>=0.5.0,<1.0",
    "python-dotenv>=1.0.0,<2.0",
    "fastapi>=0.110.0,<1.0",
    "uvicorn[standard]>=0.27.0,<1.0",
    "apscheduler>=3.10.0,<4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.4.0",
    "mypy>=1.0.0",
]
postgres = [
    "psycopg[binary]>=3.1.0,<4.0",
]

[project.scripts]
kwikkhata = "main:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]

[tool.ruff.lint.isort]
known-first-party = ["ai_parser", "database", "config", "api", "services", "jobs", "models", "scripts"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
